--- a/css/styles2.css
+++ b/css/styles2.css
@@ -16,19 +16,20 @@
   background-color: burlywood;
 }
 
-.mePic {
+/* .mePic {
   float: left;
   margin-left: 50px;
   margin-right: 30%;
   border: ridge;
   position: inherit;
   display: inline-grid;
-}
+} */
 
 .aboutMe {
-  float: right;
-  margin-left: 60%;
-  margin-right: 50px;
+  width: 500px;
+  float: left;
+  margin-left: 10%;
+  margin-right: 10%;
   border: ridge;
   color: white;
   background-color: forestgreen;
