--- a/css/styleres.css
+++ b/css/styleres.css
@@ -1,5 +1,8 @@
-body {
-  background-color: #df80ff;
+body, html {
+  height: 100%;
+  background-image: linear-gradient(#f2ccff, #df80ff);
+  /* background-repeat: no-repeat; */
+  /* background-size: cover; */
   margin: 0px;
 }
 
@@ -7,14 +10,12 @@ h1 {
   text-align: center;
   color: purple;
   font-family: Helvetica;
-  background-color: #f2ccff;
   margin-bottom: 0px;
 
 }
 
 .contact {
   text-align: center;
-  background-color: #f2ccff;
   padding-top: 1px;
   padding-bottom: 20px;
   margin-top: 0px;
@@ -24,9 +25,10 @@ h1 {
 }
 
 .content {
-  background-image: linear-gradient(#f2ccff, #df80ff);
   color: #52527a;
   padding-top: 1px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 
